--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "microbit-web-bluetooth": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5",
     "xstate": "^4.37.0"
   }
