--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false, // true: `<any>` is declared but its value is never read
     "noUnusedParameters": true,
     "moduleResolution": "node",
     "jsx": "react",
