--- a/example/package.json
+++ b/example/package.json
@@ -3,15 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "parcel src/index.html"
+    "test": "react-scripts test",
+    "start": "npx parcel src/index.html --no-cache --dist-dir .build",
+    "build": "npx parcel build src/index.html --no-cache --no-source-maps --dist-dir .build"
   },
   "devDependencies": {
-    "@types/react": "^18.0.13",
-    "@types/react-dom": "^18.0.5",
-    "vscode-react-typescript-package": "https://github.com/jp-96/vscode-react-typescript-package.git",
-    "parcel": "^2.6.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@xstate/react": "^3.2.1",
+    "microbit-web-bluetooth": "^0.6.0",
+    "parcel": "^2.8.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "vscode-react-typescript-package": "https://github.com/jp-96/vscode-react-typescript-package.git",
+    "xstate": "^4.37.0"
   }
 }
