--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "parcel: build",
+            "label": "yarn: build",
             "type": "shell",
             "command": "yarn",
             "args": [
