--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "type": "git",
     "url": "git+https://github.com/jp-96/weblueth-react.git"
   },
+  "targets": {
+    "sample": {
+      "source": "sample/index.html",
+      "isLibrary": false,
+      "distDir": "./.build"
+    }
+  },
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
@@ -17,7 +24,8 @@
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint"
+    "prepublishOnly": "npm test && npm run prettier && npm run lint",
+    "build-sample": "npx parcel build --no-cache --no-source-maps --target sample"
   },
   "peerDependencies": {
     "react": ">=16"
