--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build-sample": "npx parcel build --no-cache --no-source-maps --target sample"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "microbit-web-bluetooth": "^0.6.0",
+    "xstate": "^4.37.0"
   },
   "files": [
     "dist",
