--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,31 +29,28 @@
             "problemMatcher": [],
         },
         {
-            "label": "sample: build",
-            "type": "shell",
-            "command": "yarn",
-            "args": [
-                "build",
-            ],
-            "options": {
-              "cwd": "${workspaceFolder}/example"
-            },
-            "problemMatcher": [],
-        },
-        {
             "label": "example: build",
             "type": "shell",
             "command": "yarn",
             "args": [
+                "build-example",
+            ],
+            "problemMatcher": [],
+        },
+        {
+            "label": "example2: build",
+            "type": "shell",
+            "command": "yarn",
+            "args": [
                 "build",
             ],
             "options": {
-              "cwd": "${workspaceFolder}/example"
+              "cwd": "${workspaceFolder}/example2"
             },
             "problemMatcher": [],
         },
         {
-            "label": "example: install",
+            "label": "example2: install",
             "type": "shell",
             "command": "yarn",
             "args": [
@@ -63,7 +60,7 @@
                 "--check-cache",
             ],
             "options": {
-              "cwd": "${workspaceFolder}/example"
+              "cwd": "${workspaceFolder}/example2"
             },
             "problemMatcher": [],
         },
