--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,14 +33,14 @@ jobs:
       - name: Clean Install
         run: yarn install --immutable --immutable-cache --check-cache --inline-builds
       - name: Build
-        run: yarn build
+        run: yarn build-example
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Build (--dist-dir)
-          path: '.build'
+          # Build (example)
+          path: 'dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
