--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   },
   "peerDependencies": {
     "microbit-web-bluetooth": "^0.6.0",
-    "react": ">=16",
-    "xstate": "^4.37.0"
+    "react": ">=16"
   },
   "files": [
     "dist",
@@ -52,7 +51,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
     "xstate": "^4.37.0"
   }
 }
