--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "build-example": "npx parcel build --no-cache --no-source-maps --target example"
   },
   "peerDependencies": {
-    "microbit-web-bluetooth": "^0.6.0",
     "react": ">=16"
   },
   "files": [
@@ -46,7 +45,6 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@xstate/react": "^3.2.1",
-    "microbit-web-bluetooth": "^0.6.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,6 +52,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/web-bluetooth": "~0.0.5",
+    "microbit-web-bluetooth": "^0.6.0",
     "xstate": "^4.37.0"
   }
 }
