--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "package: yarn build",
+            "label": "yarn build",
             "type": "shell",
             "command": "yarn",
             "args": [
@@ -17,7 +17,7 @@
             },
         },
         {
-            "label": "package: yarn install",
+            "label": "yarn install",
             "type": "shell",
             "command": "yarn",
             "args": [
@@ -29,39 +29,12 @@
             "problemMatcher": [],
         },
         {
-            "label": "example: yarn build-example",
+            "label": "yarn build:example",
             "type": "shell",
             "command": "yarn",
             "args": [
-                "build-example",
+                "build:example",
             ],
-            "problemMatcher": [],
-        },
-        {
-            "label": "example2: build",
-            "type": "shell",
-            "command": "yarn",
-            "args": [
-                "build",
-            ],
-            "options": {
-              "cwd": "${workspaceFolder}/example2"
-            },
-            "problemMatcher": [],
-        },
-        {
-            "label": "example2: install",
-            "type": "shell",
-            "command": "yarn",
-            "args": [
-                "install",
-                "--immutable",
-                "--immutable-cache",
-                "--check-cache",
-            ],
-            "options": {
-              "cwd": "${workspaceFolder}/example2"
-            },
             "problemMatcher": [],
         },
     ]
