--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Clean Install
         run: yarn install --immutable --immutable-cache --check-cache --inline-builds
       - name: Build
-        run: yarn build-example
+        run: yarn build:example
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
